# ChangeLog for sys-fs/aufs3
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs3/ChangeLog,v 1.122 2015/03/09 08:02:17 jlec Exp $

*aufs3-3_p20150309 (09 Mar 2015)

  09 Mar 2015; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20150309.ebuild:
  Bump to latest aufs3 release

*aufs3-3_p20150223 (23 Feb 2015)

  23 Feb 2015; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20150223.ebuild:
  Bump to latest aufs3 release

*aufs3-3_p20150216 (17 Feb 2015)

  17 Feb 2015; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20150216.ebuild:
  Bump to latest aufs3 release

*aufs3-3_p20150126 (25 Jan 2015)

  25 Jan 2015; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20150126.ebuild:
  Bump to latest aufs3

*aufs3-3_p20150119 (18 Jan 2015)

  18 Jan 2015; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20150119.ebuild:
  Bump to latest aufs3

*aufs3-3_p20150106 (05 Jan 2015)

  05 Jan 2015; Justin Lecher <jlec@gentoo.org> -aufs3-3_p20150105.ebuild,
  +aufs3-3_p20150106.ebuild:
  Bump to latest aufs3

*aufs3-3_p20150105 (05 Jan 2015)

  05 Jan 2015; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20150105.ebuild:
  Bump to latest aufs3

  15 Dec 2014; Justin Lecher <jlec@gentoo.org> Manifest:
  Fix checksums, #532642

*aufs3-3_p20141215 (15 Dec 2014)

  15 Dec 2014; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20141215.ebuild:
  Bump to latest aufs3

*aufs3-3_p20141208 (08 Dec 2014)

  08 Dec 2014; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20141208.ebuild:
  Version BUmp

*aufs3-3_p20141110 (17 Nov 2014)

  17 Nov 2014; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20141110.ebuild:
  Bump to latest aufs3

*aufs3-3_p20141103 (04 Nov 2014)

  04 Nov 2014; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20141103.ebuild:
  Bump to new aufs3

*aufs3-3_p20141020 (20 Oct 2014)

  20 Oct 2014; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20141020.ebuild:
  Bump to latest aufs3

  14 Oct 2014; Justin Lecher <jlec@gentoo.org> aufs3-3_p20141013.ebuild: